#9 Added missing parameters

--- a/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
@@ -12,11 +12,11 @@ items:
   - CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
   - CRMScript.NetServer.NSActivityFilter.GetGroupList()
   - CRMScript.NetServer.NSActivityFilter.GetToDate()
-  - CRMScript.NetServer.NSActivityFilter.SetAssociateList()
-  - CRMScript.NetServer.NSActivityFilter.SetFromDate()
+  - CRMScript.NetServer.NSActivityFilter.SetAssociateList(NSSelectableMDOListItem[])
+  - CRMScript.NetServer.NSActivityFilter.SetFromDate(DateTime)
   - CRMScript.NetServer.NSActivityFilter.SetFutureDateList(NSMDOListItem[])
-  - CRMScript.NetServer.NSActivityFilter.SetGroupList()
-  - CRMScript.NetServer.NSActivityFilter.SetToDate()
+  - CRMScript.NetServer.NSActivityFilter.SetGroupList(NSSelectableMDOListItem[])
+  - CRMScript.NetServer.NSActivityFilter.SetToDate(DateTime)
   name: NSActivityFilter
   nameWithType: NSActivityFilter
   fullName: CRMScript.NetServer.NSActivityFilter
@@ -138,15 +138,15 @@ items:
       description:
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nDateTime toDate = thing.GetToDate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.SetAssociateList()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.SetAssociateList()
-  id: 'SetAssociateList()'
+- uid: CRMScript.NetServer.NSActivityFilter.SetAssociateList(NSSelectableMDOListItem[])
+  commentId: M:CRMScript.NetServer.NSActivityFilter.SetAssociateList(NSSelectableMDOListItem[])
+  id: 'SetAssociateList(NSSelectableMDOListItem[])'
   so.intellisense: NSActivityFilter.SetAssociateList
   langs:
   - crmscript
-  name: 'SetAssociateList()'
-  nameWithType: NSActivityFilter.SetAssociateList()
-  fullName: CRMScript.NetServer.NSActivityFilter.SetAssociateList()
+  name: 'SetAssociateList(NSSelectableMDOListItem[])'
+  nameWithType: NSActivityFilter.SetAssociateList(NSSelectableMDOListItem[])
+  fullName: CRMScript.NetServer.NSActivityFilter.SetAssociateList(NSSelectableMDOListItem[])
   type: Method
   summary: "\nSets the list of associates to filter on.\n"
   remarks: 
@@ -160,15 +160,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] associateList;\nthing.SetAssociateList(associateList);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.SetFromDate()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.SetFromDate()
-  id: 'SetFromDate()'
+- uid: CRMScript.NetServer.NSActivityFilter.SetFromDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSActivityFilter.SetFromDate(DateTime)
+  id: 'SetFromDate(DateTime)'
   so.intellisense: NSActivityFilter.SetFromDate
   langs:
   - crmscript
-  name: 'SetFromDate()'
-  nameWithType: NSActivityFilter.SetFromDate()
-  fullName: CRMScript.NetServer.NSActivityFilter.SetFromDate()
+  name: 'SetFromDate(DateTime)'
+  nameWithType: NSActivityFilter.SetFromDate(DateTime)
+  fullName: CRMScript.NetServer.NSActivityFilter.SetFromDate(DateTime)
   type: Method
   summary: "\nSets the filtering From date.\n"
   remarks: 
@@ -204,15 +204,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSMDOListItem[] futureDateList;\nthing.SetFutureDateList(futureDateList);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.SetGroupList()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.SetGroupList()
-  id: 'SetGroupList()'
+- uid: CRMScript.NetServer.NSActivityFilter.SetGroupList(NSSelectableMDOListItem[])
+  commentId: M:CRMScript.NetServer.NSActivityFilter.SetGroupList(NSSelectableMDOListItem[])
+  id: 'SetGroupList(NSSelectableMDOListItem[])'
   so.intellisense: NSActivityFilter.SetGroupList
   langs:
   - crmscript
-  name: 'SetGroupList()'
-  nameWithType: NSActivityFilter.SetGroupList()
-  fullName: CRMScript.NetServer.NSActivityFilter.SetGroupList()
+  name: 'SetGroupList(NSSelectableMDOListItem[])'
+  nameWithType: NSActivityFilter.SetGroupList(NSSelectableMDOListItem[])
+  fullName: CRMScript.NetServer.NSActivityFilter.SetGroupList(NSSelectableMDOListItem[])
   type: Method
   summary: "\nSets the list of groups to filter on.\n"
   remarks: 
@@ -226,15 +226,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] groupList;\nthing.SetGroupList(groupList);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.SetToDate()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.SetToDate()
-  id: 'SetToDate()'
+- uid: CRMScript.NetServer.NSActivityFilter.SetToDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSActivityFilter.SetToDate(DateTime)
+  id: 'SetToDate(DateTime)'
   so.intellisense: NSActivityFilter.SetToDate
   langs:
   - crmscript
-  name: 'SetToDate()'
-  nameWithType: NSActivityFilter.SetToDate()
-  fullName: CRMScript.NetServer.NSActivityFilter.SetToDate()
+  name: 'SetToDate(DateTime)'
+  nameWithType: NSActivityFilter.SetToDate(DateTime)
+  fullName: CRMScript.NetServer.NSActivityFilter.SetToDate(DateTime)
   type: Method
   summary: "\nSets the filtering To date.\n"
   remarks: 
