--- a/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
@@ -9,8 +9,8 @@ items:
   - CRMScript.NetServer.NSActivityInformationListItem.#ctor
   - CRMScript.NetServer.NSActivityInformationListItem.GetActivityInformation()
   - CRMScript.NetServer.NSActivityInformationListItem.GetDate()
-  - CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation()
-  - CRMScript.NetServer.NSActivityInformationListItem.SetDate()
+  - CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
+  - CRMScript.NetServer.NSActivityInformationListItem.SetDate(DateTime)
   name: NSActivityInformationListItem
   nameWithType: NSActivityInformationListItem
   fullName: CRMScript.NetServer.NSActivityInformationListItem
@@ -72,15 +72,15 @@ items:
       descending: the date that this item is valid for
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nDateTime date = thing.GetDate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation()
-  commentId: M:CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation()
-  id: 'SetActivityInformation()'
+- uid: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
+  commentId: M:CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
+  id: 'SetActivityInformation(NSActivitySummary)'
   so.intellisense: NSActivityInformationListItem.SetActivityInformation
   langs:
   - crmscript
-  name: 'SetActivityInformation()'
-  nameWithType: NSActivityInformationListItem.SetActivityInformation()
-  fullName: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation()
+  name: 'SetActivityInformation(NSActivitySummary)'
+  nameWithType: NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
+  fullName: CRMScript.NetServer.NSActivityInformationListItem.SetActivityInformation(NSActivitySummary)
   type: Method
   summary: "\nSets the number of free and busy activities.\n"
   remarks: 
@@ -94,15 +94,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityInformationListItem thing;\nNSActivitySummary activityInformation;\nthing.SetActivityInformation(activityInformation);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityInformationListItem.SetDate()
-  commentId: M:CRMScript.NetServer.NSActivityInformationListItem.SetDate()
-  id: 'SetDate()'
+- uid: CRMScript.NetServer.NSActivityInformationListItem.SetDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSActivityInformationListItem.SetDate(DateTime)
+  id: 'SetDate(DateTime)'
   so.intellisense: NSActivityInformationListItem.SetDate
   langs:
   - crmscript
-  name: 'SetDate()'
-  nameWithType: NSActivityInformationListItem.SetDate()
-  fullName: CRMScript.NetServer.NSActivityInformationListItem.SetDate()
+  name: 'SetDate(DateTime)'
+  nameWithType: NSActivityInformationListItem.SetDate(DateTime)
+  fullName: CRMScript.NetServer.NSActivityInformationListItem.SetDate(DateTime)
   type: Method
   summary: "\nSets the date that this item is valid for.\n"
   remarks: "\nThere is exactly one item per date, ordered by date.\n"
