--- a/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
@@ -15,10 +15,10 @@ items:
   - CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
   - CRMScript.NetServer.NSActivitySummaryItem.SetAppointmentId(Integer)
   - CRMScript.NetServer.NSActivitySummaryItem.SetCompleted(Integer)
-  - CRMScript.NetServer.NSActivitySummaryItem.SetDate()
+  - CRMScript.NetServer.NSActivitySummaryItem.SetDate(DateTime)
   - CRMScript.NetServer.NSActivitySummaryItem.SetDescription(String)
   - CRMScript.NetServer.NSActivitySummaryItem.SetDocumentId(Integer)
-  - CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
+  - CRMScript.NetServer.NSActivitySummaryItem.SetRegistered(DateTime)
   name: NSActivitySummaryItem
   nameWithType: NSActivitySummaryItem
   fullName: CRMScript.NetServer.NSActivitySummaryItem
@@ -204,15 +204,15 @@ items:
       type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nInteger completed;\nthing.SetCompleted(completed);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.SetDate()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.SetDate()
-  id: 'SetDate()'
+- uid: CRMScript.NetServer.NSActivitySummaryItem.SetDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.SetDate(DateTime)
+  id: 'SetDate(DateTime)'
   so.intellisense: NSActivitySummaryItem.SetDate
   langs:
   - crmscript
-  name: 'SetDate()'
-  nameWithType: NSActivitySummaryItem.SetDate()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.SetDate()
+  name: 'SetDate(DateTime)'
+  nameWithType: NSActivitySummaryItem.SetDate(DateTime)
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.SetDate(DateTime)
   type: Method
   summary: "\nStart/Document date\n"
   remarks: 
@@ -265,15 +265,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nInteger documentId;\nthing.SetDocumentId(documentId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
-  id: 'SetRegistered()'
+- uid: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered(DateTime)
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.SetRegistered(DateTime)
+  id: 'SetRegistered(DateTime)'
   so.intellisense: NSActivitySummaryItem.SetRegistered
   langs:
   - crmscript
-  name: 'SetRegistered()'
-  nameWithType: NSActivitySummaryItem.SetRegistered()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
+  name: 'SetRegistered(DateTime)'
+  nameWithType: NSActivitySummaryItem.SetRegistered(DateTime)
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered(DateTime)
   type: Method
   summary: "\nSets the registered date.\n"
   remarks: 
