--- a/docs/api-reference/CRMScript.NetServer.NSAddress.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddress.yml
@@ -10,9 +10,9 @@ items:
   - CRMScript.NetServer.NSAddress.GetLocalizedAddress()
   - CRMScript.NetServer.NSAddress.GetWgs84Latitude()
   - CRMScript.NetServer.NSAddress.GetWgs84Longitude()
-  - CRMScript.NetServer.NSAddress.SetLocalizedAddress()
-  - CRMScript.NetServer.NSAddress.SetWgs84Latitude()
-  - CRMScript.NetServer.NSAddress.SetWgs84Longitude()
+  - CRMScript.NetServer.NSAddress.SetLocalizedAddress(NSLocalizedField[][])
+  - CRMScript.NetServer.NSAddress.SetWgs84Latitude(Float)
+  - CRMScript.NetServer.NSAddress.SetWgs84Longitude(Float)
   name: NSAddress
   nameWithType: NSAddress
   fullName: CRMScript.NetServer.NSAddress
@@ -91,15 +91,15 @@ items:
       type: CRMScript.Global.Float
       description:
   example: 
-- uid: CRMScript.NetServer.NSAddress.SetLocalizedAddress()
-  commentId: M:CRMScript.NetServer.NSAddress.SetLocalizedAddress()
-  id: 'SetLocalizedAddress()'
+- uid: CRMScript.NetServer.NSAddress.SetLocalizedAddress(NSLocalizedField[][])
+  commentId: M:CRMScript.NetServer.NSAddress.SetLocalizedAddress(NSLocalizedField[][])
+  id: 'SetLocalizedAddress(NSLocalizedField[][])'
   so.intellisense: NSAddress.SetLocalizedAddress
   langs:
   - crmscript
-  name: 'SetLocalizedAddress()'
-  nameWithType: NSAddress.SetLocalizedAddress()
-  fullName: CRMScript.NetServer.NSAddress.SetLocalizedAddress()
+  name: 'SetLocalizedAddress(NSLocalizedField[][])'
+  nameWithType: NSAddress.SetLocalizedAddress(NSLocalizedField[][])
+  fullName: CRMScript.NetServer.NSAddress.SetLocalizedAddress(NSLocalizedField[][])
   type: Method
   summary: "\nNSLocalizedField[] is a list of LocalizedFieldList objects. Used to store localized information such as formatted address data.\n"
   remarks: 
@@ -112,15 +112,15 @@ items:
     return:
       type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSAddress.SetWgs84Latitude()
-  commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Latitude()
-  id: 'SetWgs84Latitude()'
+- uid: CRMScript.NetServer.NSAddress.SetWgs84Latitude(Float)
+  commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Latitude(Float)
+  id: 'SetWgs84Latitude(Float)'
   so.intellisense: NSAddress.SetWgs84Latitude
   langs:
   - crmscript
-  name: 'SetWgs84Latitude()'
-  nameWithType: NSAddress.SetWgs84Latitude()
-  fullName: CRMScript.NetServer.NSAddress.SetWgs84Latitude()
+  name: 'SetWgs84Latitude(Float)'
+  nameWithType: NSAddress.SetWgs84Latitude(Float)
+  fullName: CRMScript.NetServer.NSAddress.SetWgs84Latitude(Float)
   type: Method
   summary: 
   remarks: 
@@ -133,15 +133,15 @@ items:
     return:
       type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSAddress.SetWgs84Longitude()
-  commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Longitude()
-  id: 'SetWgs84Longitude()'
+- uid: CRMScript.NetServer.NSAddress.SetWgs84Longitude(Float)
+  commentId: M:CRMScript.NetServer.NSAddress.SetWgs84Longitude(Float)
+  id: 'SetWgs84Longitude(Float)'
   so.intellisense: NSAddress.SetWgs84Longitude
   langs:
   - crmscript
-  name: 'SetWgs84Longitude()'
-  nameWithType: NSAddress.SetWgs84Longitude()
-  fullName: CRMScript.NetServer.NSAddress.SetWgs84Longitude()
+  name: 'SetWgs84Longitude(Float)'
+  nameWithType: NSAddress.SetWgs84Longitude(Float)
+  fullName: CRMScript.NetServer.NSAddress.SetWgs84Longitude(Float)
   type: Method
   summary: 
   remarks: 
