--- a/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
@@ -27,8 +27,8 @@ items:
   - CRMScript.NetServer.NSAddressSyncData.SetCity(String)
   - CRMScript.NetServer.NSAddressSyncData.SetCounty(String)
   - CRMScript.NetServer.NSAddressSyncData.SetFormattedAddress(String)
-  - CRMScript.NetServer.NSAddressSyncData.SetLatitude()
-  - CRMScript.NetServer.NSAddressSyncData.SetLongitude()
+  - CRMScript.NetServer.NSAddressSyncData.SetLatitude(Float)
+  - CRMScript.NetServer.NSAddressSyncData.SetLongitude(Float)
   - CRMScript.NetServer.NSAddressSyncData.SetState(String)
   - CRMScript.NetServer.NSAddressSyncData.SetZipCode(String)
   name: NSAddressSyncData
@@ -437,7 +437,7 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void Set SetCounty(String county)
+    content: Void SetCounty(String county)
     parameters:
     - id: county
       type: CRMScript.Global.String
@@ -468,15 +468,15 @@ items:
       type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSAddressSyncData thing;\nString formattedAddress;\nthing.SetFormattedAddress(formattedAddress);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAddressSyncData.SetLatitude()
-  commentId: M:CRMScript.NetServer.NSAddressSyncData.SetLatitude()
-  id: 'SetLatitude()'
+- uid: CRMScript.NetServer.NSAddressSyncData.SetLatitude(Float)
+  commentId: M:CRMScript.NetServer.NSAddressSyncData.SetLatitude(Float)
+  id: 'SetLatitude(Float)'
   so.intellisense: NSAddressSyncData.SetLatitude
   langs:
   - crmscript
-  name: 'SetLatitude()'
-  nameWithType: NSAddressSyncData.SetLatitude()
-  fullName: CRMScript.NetServer.NSAddressSyncData.SetLatitude()
+  name: 'SetLatitude(Float)'
+  nameWithType: NSAddressSyncData.SetLatitude(Float)
+  fullName: CRMScript.NetServer.NSAddressSyncData.SetLatitude(Float)
   type: Method
   summary: 
   remarks: 
@@ -490,15 +490,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAddressSyncData thing;\nFloat latitude;\nthing.SetLatitude(latitude);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAddressSyncData.SetLongitude()
-  commentId: M:CRMScript.NetServer.NSAddressSyncData.SetLongitude()
-  id: 'SetLongitude()'
+- uid: CRMScript.NetServer.NSAddressSyncData.SetLongitude(Float)
+  commentId: M:CRMScript.NetServer.NSAddressSyncData.SetLongitude(Float)
+  id: 'SetLongitude(Float)'
   so.intellisense: NSAddressSyncData.SetLongitude
   langs:
   - crmscript
-  name: 'SetLongitude()'
-  nameWithType: NSAddressSyncData.SetLongitude()
-  fullName: CRMScript.NetServer.NSAddressSyncData.SetLongitude()
+  name: 'SetLongitude(Float)'
+  nameWithType: NSAddressSyncData.SetLongitude(Float)
+  fullName: CRMScript.NetServer.NSAddressSyncData.SetLongitude(Float)
   type: Method
   summary: 
   remarks: 
