--- a/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
@@ -29,7 +29,7 @@ items:
   - CRMScript.NetServer.NSAlarmData.GetSaleName()
   - CRMScript.NetServer.NSAlarmData.GetStartTime()
   - CRMScript.NetServer.NSAlarmData.GetTaskName()
-  - CRMScript.NetServer.NSAlarmData.SetAlarmTime()
+  - CRMScript.NetServer.NSAlarmData.SetAlarmTime(DateTime)
   - CRMScript.NetServer.NSAlarmData.SetAppointmentId(Integer)
   - CRMScript.NetServer.NSAlarmData.SetAppointmentText(String)
   - CRMScript.NetServer.NSAlarmData.SetAppointmentType(Integer)
@@ -39,7 +39,7 @@ items:
   - CRMScript.NetServer.NSAlarmData.SetContactFullName(String)
   - CRMScript.NetServer.NSAlarmData.SetContactId(Integer)
   - CRMScript.NetServer.NSAlarmData.SetContactName(String)
-  - CRMScript.NetServer.NSAlarmData.SetEndDate()
+  - CRMScript.NetServer.NSAlarmData.SetEndDate(DateTime)
   - CRMScript.NetServer.NSAlarmData.SetFormalName(String)
   - CRMScript.NetServer.NSAlarmData.SetInvitationStatus(Integer)
   - CRMScript.NetServer.NSAlarmData.SetLocation(String)
@@ -49,7 +49,7 @@ items:
   - CRMScript.NetServer.NSAlarmData.SetProjectName(String)
   - CRMScript.NetServer.NSAlarmData.SetSaleId(Integer)
   - CRMScript.NetServer.NSAlarmData.SetSaleName(String)
-  - CRMScript.NetServer.NSAlarmData.SetStartTime()
+  - CRMScript.NetServer.NSAlarmData.SetStartTime(DateTime)
   - CRMScript.NetServer.NSAlarmData.SetTaskName(String)
   name: NSAlarmData
   nameWithType: NSAlarmData
@@ -512,15 +512,15 @@ items:
       description:
   example: 
   - "\n<pre><code>NSAlarmData thing;\nString taskName = thing.GetTaskName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAlarmData.SetAlarmTime()
-  commentId: M:CRMScript.NetServer.NSAlarmData.SetAlarmTime()
-  id: 'SetAlarmTime()'
+- uid: CRMScript.NetServer.NSAlarmData.SetAlarmTime(DateTime)
+  commentId: M:CRMScript.NetServer.NSAlarmData.SetAlarmTime(DateTime)
+  id: 'SetAlarmTime(DateTime)'
   so.intellisense: NSAlarmData.SetAlarmTime
   langs:
   - crmscript
-  name: 'SetAlarmTime()'
-  nameWithType: NSAlarmData.SetAlarmTime()
-  fullName: CRMScript.NetServer.NSAlarmData.SetAlarmTime()
+  name: 'SetAlarmTime(DateTime)'
+  nameWithType: NSAlarmData.SetAlarmTime(DateTime)
+  fullName: CRMScript.NetServer.NSAlarmData.SetAlarmTime(DateTime)
   type: Method
   summary: 
   remarks: 
@@ -732,15 +732,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAlarmData thing;\nString contactName;\nthing.SetContactName(contactName);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAlarmData.SetEndDate()
-  commentId: M:CRMScript.NetServer.NSAlarmData.SetEndDate()
-  id: 'SetEndDate()'
+- uid: CRMScript.NetServer.NSAlarmData.SetEndDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSAlarmData.SetEndDate(DateTime)
+  id: 'SetEndDate(DateTime)'
   so.intellisense: NSAlarmData.SetEndDate
   langs:
   - crmscript
-  name: 'SetEndDate()'
-  nameWithType: NSAlarmData.SetEndDate()
-  fullName: CRMScript.NetServer.NSAlarmData.SetEndDate()
+  name: 'SetEndDate(DateTime)'
+  nameWithType: NSAlarmData.SetEndDate(DateTime)
+  fullName: CRMScript.NetServer.NSAlarmData.SetEndDate(DateTime)
   type: Method
   summary: ""
   remarks: 
@@ -952,15 +952,15 @@ items:
       type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSAlarmData thing;\nString saleName;\nthing.SetSaleName(saleName);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAlarmData.SetStartTime()
-  commentId: M:CRMScript.NetServer.NSAlarmData.SetStartTime()
-  id: 'SetStartTime()'
+- uid: CRMScript.NetServer.NSAlarmData.SetStartTime(DateTime)
+  commentId: M:CRMScript.NetServer.NSAlarmData.SetStartTime(DateTime)
+  id: 'SetStartTime(DateTime)'
   so.intellisense: NSAlarmData.SetStartTime
   langs:
   - crmscript
-  name: 'SetStartTime()'
-  nameWithType: NSAlarmData.SetStartTime()
-  fullName: CRMScript.NetServer.NSAlarmData.SetStartTime()
+  name: 'SetStartTime(DateTime)'
+  nameWithType: NSAlarmData.SetStartTime(DateTime)
+  fullName: CRMScript.NetServer.NSAlarmData.SetStartTime(DateTime)
   type: Method
   summary: ""
   remarks: 
