--- a/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAmountClassEntity.yml
@@ -16,8 +16,8 @@ items:
   - CRMScript.NetServer.NSAmountClassEntity.GetRank()
   - CRMScript.NetServer.NSAmountClassEntity.GetTooltip()
   - CRMScript.NetServer.NSAmountClassEntity.SetAmountClassId(Integer)
-  - CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
-  - CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
+  - CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom(Float)
+  - CRMScript.NetServer.NSAmountClassEntity.SetAmountTo(Float)
   - CRMScript.NetServer.NSAmountClassEntity.SetCurrencyId(Integer)
   - CRMScript.NetServer.NSAmountClassEntity.SetDeleted(Bool)
   - CRMScript.NetServer.NSAmountClassEntity.SetName(String)
@@ -226,15 +226,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nInteger amountClassId;\nthing.SetAmountClassId(amountClassId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
-  commentId: M:CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
-  id: 'SetAmountFrom()'
+- uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom(Float)
+  commentId: M:CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom(Float)
+  id: 'SetAmountFrom(Float)'
   so.intellisense: NSAmountClassEntity.SetAmountFrom
   langs:
   - crmscript
-  name: 'SetAmountFrom()'
-  nameWithType: NSAmountClassEntity.SetAmountFrom()
-  fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom()
+  name: 'SetAmountFrom(Float)'
+  nameWithType: NSAmountClassEntity.SetAmountFrom(Float)
+  fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountFrom(Float)
   type: Method
   summary: ""
   remarks: 
@@ -248,15 +248,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAmountClassEntity thing;\nFloat amountFrom;\nthing.SetAmountFrom(amountFrom);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
-  commentId: M:CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
-  id: 'SetAmountTo()'
+- uid: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo(Float)
+  commentId: M:CRMScript.NetServer.NSAmountClassEntity.SetAmountTo(Float)
+  id: 'SetAmountTo(Float)'
   so.intellisense: NSAmountClassEntity.SetAmountTo
   langs:
   - crmscript
-  name: 'SetAmountTo()'
-  nameWithType: NSAmountClassEntity.SetAmountTo()
-  fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo()
+  name: 'SetAmountTo(Float)'
+  nameWithType: NSAmountClassEntity.SetAmountTo(Float)
+  fullName: CRMScript.NetServer.NSAmountClassEntity.SetAmountTo(Float)
   type: Method
   summary: ""
   remarks: 
