--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentSyncData.yml
@@ -33,14 +33,14 @@ items:
   - CRMScript.NetServer.NSAppointmentSyncData.GetSaleName()
   - CRMScript.NetServer.NSAppointmentSyncData.GetStartDate()
   - CRMScript.NetServer.NSAppointmentSyncData.GetTaskName()
-  - CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime()
+  - CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime(DateTime)
   - CRMScript.NetServer.NSAppointmentSyncData.SetAppointmentId(Integer)
   - CRMScript.NetServer.NSAppointmentSyncData.SetAppointmentText(String)
   - CRMScript.NetServer.NSAppointmentSyncData.SetContactDepartment(String)
   - CRMScript.NetServer.NSAppointmentSyncData.SetContactFullName(String)
   - CRMScript.NetServer.NSAppointmentSyncData.SetContactId(Integer)
   - CRMScript.NetServer.NSAppointmentSyncData.SetContactName(String)
-  - CRMScript.NetServer.NSAppointmentSyncData.SetEndDate()
+  - CRMScript.NetServer.NSAppointmentSyncData.SetEndDate(DateTime)
   - CRMScript.NetServer.NSAppointmentSyncData.SetHasAlarm(Bool)
   - CRMScript.NetServer.NSAppointmentSyncData.SetIsAllDay(Bool)
   - CRMScript.NetServer.NSAppointmentSyncData.SetIsAssignment(Bool)
@@ -57,7 +57,7 @@ items:
   - CRMScript.NetServer.NSAppointmentSyncData.SetProjectName(String)
   - CRMScript.NetServer.NSAppointmentSyncData.SetSaleId(Integer)
   - CRMScript.NetServer.NSAppointmentSyncData.SetSaleName(String)
-  - CRMScript.NetServer.NSAppointmentSyncData.SetStartDate()
+  - CRMScript.NetServer.NSAppointmentSyncData.SetStartDate(DateTime)
   - CRMScript.NetServer.NSAppointmentSyncData.SetTaskName(String)
   name: NSAppointmentSyncData
   nameWithType: NSAppointmentSyncData
@@ -600,15 +600,15 @@ items:
       description:
   example: 
   - "\n<pre><code>NSAppointmentSyncData thing;\nString taskName = thing.GetTaskName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime()
-  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime()
-  id: 'SetAlarmTime()'
+- uid: CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime(DateTime)
+  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime(DateTime)
+  id: 'SetAlarmTime(DateTime)'
   so.intellisense: NSAppointmentSyncData.SetAlarmTime
   langs:
   - crmscript
-  name: 'SetAlarmTime()'
-  nameWithType: NSAppointmentSyncData.SetAlarmTime()
-  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime()
+  name: 'SetAlarmTime(DateTime)'
+  nameWithType: NSAppointmentSyncData.SetAlarmTime(DateTime)
+  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetAlarmTime(DateTime)
   type: Method
   summary: ""
   remarks: 
@@ -754,15 +754,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAppointmentSyncData thing;\nString contactName;\nthing.SetContactName(contactName);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAppointmentSyncData.SetEndDate()
-  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetEndDate()
-  id: 'SetEndDate()'
+- uid: CRMScript.NetServer.NSAppointmentSyncData.SetEndDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetEndDate(DateTime)
+  id: 'SetEndDate(DateTime)'
   so.intellisense: NSAppointmentSyncData.SetEndDate
   langs:
   - crmscript
-  name: 'SetEndDate()'
-  nameWithType: NSAppointmentSyncData.SetEndDate()
-  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetEndDate()
+  name: 'SetEndDate(DateTime)'
+  nameWithType: NSAppointmentSyncData.SetEndDate(DateTime)
+  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetEndDate(DateTime)
   type: Method
   summary: ""
   remarks: 
@@ -1128,15 +1128,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAppointmentSyncData thing;\nString saleName;\nthing.SetSaleName(saleName);</code></pre>\n"
-- uid: CRMScript.NetServer.NSAppointmentSyncData.SetStartDate()
-  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetStartDate()
-  id: 'SetStartDate()'
+- uid: CRMScript.NetServer.NSAppointmentSyncData.SetStartDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSAppointmentSyncData.SetStartDate(DateTime)
+  id: 'SetStartDate(DateTime)'
   so.intellisense: NSAppointmentSyncData.SetStartDate
   langs:
   - crmscript
-  name: 'SetStartDate()'
-  nameWithType: NSAppointmentSyncData.SetStartDate()
-  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetStartDate()
+  name: 'SetStartDate(DateTime)'
+  nameWithType: NSAppointmentSyncData.SetStartDate(DateTime)
+  fullName: CRMScript.NetServer.NSAppointmentSyncData.SetStartDate(DateTime)
   type: Method
   summary: ""
   remarks: 
