--- a/docs/api-reference/CRMScript.NetServer.NSArchiveAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveAgent.yml
@@ -29,7 +29,7 @@ items:
   - CRMScript.NetServer.NSArchiveAgent.GetAvailableEntities(String,String)
   - CRMScript.NetServer.NSArchiveAgent.GetGroupAssociateIds(Integer[])
   - CRMScript.NetServer.NSArchiveAgent.GetProviderNames()
-  - CRMScript.NetServer.NSArchiveAgent.SetActivityFilter()
+  - CRMScript.NetServer.NSArchiveAgent.SetActivityFilter(NSActivityFilter)
   - CRMScript.NetServer.NSArchiveAgent.SetChosenColumns(String,String,String[])
   - CRMScript.NetServer.NSArchiveAgent.SetChosenColumnsV2(String,String,String,String,String[])
   - CRMScript.NetServer.NSArchiveAgent.SetChosenEntities(String,String,String[])
@@ -806,15 +806,15 @@ items:
       description: Array of all archive provider names.
   example: 
   - "\n<pre><code>NSArchiveAgent agent;\nString[] res = agent.GetProviderNames();</code></pre>\n"
-- uid: CRMScript.NetServer.NSArchiveAgent.SetActivityFilter()
-  commentId: M:CRMScript.NetServer.NSArchiveAgent.SetActivityFilter()
-  id: 'SetActivityFilter()'
+- uid: CRMScript.NetServer.NSArchiveAgent.SetActivityFilter(NSActivityFilter)
+  commentId: M:CRMScript.NetServer.NSArchiveAgent.SetActivityFilter(NSActivityFilter)
+  id: 'SetActivityFilter(NSActivityFilter)'
   so.intellisense: NSArchiveAgent.SetActivityFilter
   langs:
   - crmscript
-  name: 'SetActivityFilter()'
-  nameWithType: NSArchiveAgent.SetActivityFilter()
-  fullName: CRMScript.NetServer.NSArchiveAgent.SetActivityFilter()
+  name: 'SetActivityFilter(NSActivityFilter)'
+  nameWithType: NSArchiveAgent.SetActivityFilter(NSActivityFilter)
+  fullName: CRMScript.NetServer.NSArchiveAgent.SetActivityFilter(NSActivityFilter)
   type: Method
   summary: "\nSets activity filter for the specified list.\n"
   remarks: 
