--- a/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSArchiveRestrictionInfo.yml
@@ -276,7 +276,7 @@ items:
   langs:
   - crmscript
   name: 'SetColumnInfo(NSArchiveColumnInfo)'
-  nameWithType: NSArchiveRestrictionInfo.SetColumnInfoNSArchiveColumnInfo()
+  nameWithType: NSArchiveRestrictionInfo.SetColumnInfoNSArchiveColumnInfo(NSArchiveColumnInfo)
   fullName: CRMScript.NetServer.NSArchiveRestrictionInfo.SetColumnInfo(NSArchiveColumnInfo)
   type: Method
   summary: ""
