--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -29,7 +29,7 @@ items:
   - CRMScript.NetServer.NSBatchTaskInfo.#ctor
   - CRMScript.NetServer.NSBatchTaskInfo.SetAssociateId(Integer)
   - CRMScript.NetServer.NSBatchTaskInfo.SetContext(String)
-  - CRMScript.NetServer.NSBatchTaskInfo.SetCreated()
+  - CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
   - CRMScript.NetServer.NSBatchTaskInfo.SetDatabaseSerialNumber(String)
   - CRMScript.NetServer.NSBatchTaskInfo.SetDescription(String)
   - CRMScript.NetServer.NSBatchTaskInfo.SetDetailsRecord(Integer)
@@ -37,7 +37,7 @@ items:
   - CRMScript.NetServer.NSBatchTaskInfo.SetId(Integer)
   - CRMScript.NetServer.NSBatchTaskInfo.SetIsInternalTask(Bool)
   - CRMScript.NetServer.NSBatchTaskInfo.SetIsSystemTask(Bool)
-  - CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted()
+  - CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted(DateTime)
   - CRMScript.NetServer.NSBatchTaskInfo.SetName(String)
   - CRMScript.NetServer.NSBatchTaskInfo.SetParameterObject(Map)
   - CRMScript.NetServer.NSBatchTaskInfo.SetProgressDescription(String)
@@ -512,21 +512,26 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nString context;\nthing.SetContext(context);</code></pre>\n"
-- uid: CRMScript.NetServer.NSBatchTaskInfo.SetCreated()
-  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetCreated()
-  id: 'SetCreated()'
+- uid: CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
+  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
+  id: 'SetCreated(DateTime)'
   so.intellisense: NSBatchTaskInfo.SetCreated
   langs:
   - crmscript
-  name: 'SetCreated()'
-  nameWithType: NSBatchTaskInfo.SetCreated()
-  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetCreated()
+  name: 'SetCreated(DateTime)'
+  nameWithType: NSBatchTaskInfo.SetCreated(DateTime)
+  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetCreated(DateTime)
   type: Method
-  summary: "\nTask creation time.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetCreated(DateTime created)
     parameters:
+    - id: created
+      type: CRMScript.Global.DateTime
+      description: Task creation time.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nDateTime created;\nthing.SetCreated(created);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.SetDatabaseSerialNumber(String)
@@ -683,21 +688,26 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nBool isSystemTask;\nthing.SetIsSystemTask(isSystemTask);</code></pre>\n"
-- uid: CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted()
-  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted()
-  id: 'SetLastStarted()'
+- uid: CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted(DateTime)
+  commentId: M:CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted(DateTime)
+  id: 'SetLastStarted(DateTime)'
   so.intellisense: NSBatchTaskInfo.SetLastStarted
   langs:
   - crmscript
-  name: 'SetLastStarted()'
-  nameWithType: NSBatchTaskInfo.SetLastStarted()
-  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted()
+  name: 'SetLastStarted(DateTime)'
+  nameWithType: NSBatchTaskInfo.SetLastStarted(DateTime)
+  fullName: CRMScript.NetServer.NSBatchTaskInfo.SetLastStarted(DateTime)
   type: Method
-  summary: "\nWhen was the task last started.\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLastStarted(DateTime lastStarted)
     parameters:
+    - id: lastStarted
+      type: CRMScript.Global.DateTime
+      description: When was the task last started.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nDateTime lastStarted;\nthing.SetLastStarted(lastStarted);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.SetName(String)
