--- a/docs/api-reference/CRMScript.NetServer.NSCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCredential.yml
@@ -11,7 +11,7 @@ items:
   - CRMScript.NetServer.NSCredential.GetType()
   - CRMScript.NetServer.NSCredential.GetValue()
   - CRMScript.NetServer.NSCredential.SetDisplayValue(String)
-  - CRMScript.NetServer.NSCredential.SetType()
+  - CRMScript.NetServer.NSCredential.SetType(NSCredentialType)
   - CRMScript.NetServer.NSCredential.SetValue(String)
   name: NSCredential
   nameWithType: NSCredential
@@ -116,15 +116,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCredential thing;\nString displayValue;\nthing.SetDisplayValue(displayValue);</code></pre>\n"
-- uid: CRMScript.NetServer.NSCredential.SetType()
-  commentId: M:CRMScript.NetServer.NSCredential.SetType()
-  id: 'SetType()'
+- uid: CRMScript.NetServer.NSCredential.SetType(NSCredentialType)
+  commentId: M:CRMScript.NetServer.NSCredential.SetType(NSCredentialType)
+  id: 'SetType(NSCredentialType)'
   so.intellisense: NSCredential.SetType
   langs:
   - crmscript
-  name: 'SetType()'
-  nameWithType: NSCredential.SetType()
-  fullName: CRMScript.NetServer.NSCredential.SetType()
+  name: 'SetType(NSCredentialType)'
+  nameWithType: NSCredential.SetType(NSCredentialType)
+  fullName: CRMScript.NetServer.NSCredential.SetType(NSCredentialType)
   type: Method
   summary: ""
   remarks: 
