--- a/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCriteriaInformation.yml
@@ -11,7 +11,7 @@ items:
   - CRMScript.NetServer.NSCriteriaInformation.GetCriteriaArchiveRows()
   - CRMScript.NetServer.NSCriteriaInformation.GetRestrictionGroups()
   - CRMScript.NetServer.NSCriteriaInformation.GetRestrictions()
-  - CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns()
+  - CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
   - CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveRows(NSArchiveListItem[])
   - CRMScript.NetServer.NSCriteriaInformation.SetRestrictionGroups(NSArchiveRestrictionGroup[])
   - CRMScript.NetServer.NSCriteriaInformation.SetRestrictions(NSArchiveRestrictionInfo[])
@@ -116,15 +116,15 @@ items:
       description: Array of NSArchiveRestrictionInfo restriction specifications (for the first group if there are more than one)
   example: 
   - "\n<pre><code>NSCriteriaInformation thing;\nNSArchiveRestrictionInfo[] restrictions = thing.GetRestrictions();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns()
-  commentId: M:CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns()
-  id: 'SetCriteriaArchiveColumns()'
+- uid: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
+  commentId: M:CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
+  id: 'SetCriteriaArchiveColumns(NSArchiveColumnInfo[])'
   so.intellisense: NSCriteriaInformation.SetCriteriaArchiveColumns
   langs:
   - crmscript
-  name: 'SetCriteriaArchiveColumns()'
-  nameWithType: NSCriteriaInformation.SetCriteriaArchiveColumns()
-  fullName: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns()
+  name: 'SetCriteriaArchiveColumns(NSArchiveColumnInfo[])'
+  nameWithType: NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
+  fullName: CRMScript.NetServer.NSCriteriaInformation.SetCriteriaArchiveColumns(NSArchiveColumnInfo[])
   type: Method
   summary: ""
   remarks: 
