--- a/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentEntity.yml
@@ -48,13 +48,13 @@ items:
   - CRMScript.NetServer.NSDocumentEntity.SetContact(NSContact)
   - CRMScript.NetServer.NSDocumentEntity.SetCreatedBy(NSAssociate)
   - CRMScript.NetServer.NSDocumentEntity.SetCreatedDate(DateTime)
-  - CRMScript.NetServer.NSDocumentEntity.SetCustomFields()
+  - CRMScript.NetServer.NSDocumentEntity.SetCustomFields(Map)
   - CRMScript.NetServer.NSDocumentEntity.SetDate(DateTime)
   - CRMScript.NetServer.NSDocumentEntity.SetDescription(String)
   - CRMScript.NetServer.NSDocumentEntity.SetDocumentId(Integer)
   - CRMScript.NetServer.NSDocumentEntity.SetDocumentTemplate(NSDocumentTemplate)
   - CRMScript.NetServer.NSDocumentEntity.SetExternalRef(String)
-  - CRMScript.NetServer.NSDocumentEntity.SetExtraFields()
+  - CRMScript.NetServer.NSDocumentEntity.SetExtraFields(Map)
   - CRMScript.NetServer.NSDocumentEntity.SetHeader(String)
   - CRMScript.NetServer.NSDocumentEntity.SetIsPublished(Bool)
   - CRMScript.NetServer.NSDocumentEntity.SetLinks(NSLink[])
@@ -926,15 +926,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nDateTime createdDate;\nthing.SetCreatedDate(createdDate);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentEntity.SetCustomFields()
-  commentId: M:CRMScript.NetServer.NSDocumentEntity.SetCustomFields()
-  id: 'SetCustomFields()'
+- uid: CRMScript.NetServer.NSDocumentEntity.SetCustomFields(Map)
+  commentId: M:CRMScript.NetServer.NSDocumentEntity.SetCustomFields(Map)
+  id: 'SetCustomFields(Map)'
   so.intellisense: NSDocumentEntity.SetCustomFields
   langs:
   - crmscript
-  name: 'SetCustomFields()'
-  nameWithType: NSDocumentEntity.SetCustomFields()
-  fullName: CRMScript.NetServer.NSDocumentEntity.SetCustomFields()
+  name: 'SetCustomFields(Map)'
+  nameWithType: NSDocumentEntity.SetCustomFields(Map)
+  fullName: CRMScript.NetServer.NSDocumentEntity.SetCustomFields(Map)
   type: Method
   summary: "\nSets the user-defined and extra fields on an NSDocumentEntity with a map.\n"
   remarks: 
@@ -1058,15 +1058,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentEntity thing;\nString externalRef;\nthing.SetExternalRef(externalRef);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentEntity.SetExtraFields()
-  commentId: M:CRMScript.NetServer.NSDocumentEntity.SetExtraFields()
-  id: 'SetExtraFields()'
+- uid: CRMScript.NetServer.NSDocumentEntity.SetExtraFields(Map)
+  commentId: M:CRMScript.NetServer.NSDocumentEntity.SetExtraFields(Map)
+  id: 'SetExtraFields(Map)'
   so.intellisense: NSDocumentEntity.SetExtraFields
   langs:
   - crmscript
-  name: 'SetExtraFields()'
-  nameWithType: NSDocumentEntity.SetExtraFields()
-  fullName: CRMScript.NetServer.NSDocumentEntity.SetExtraFields()
+  name: 'SetExtraFields(Map)'
+  nameWithType: NSDocumentEntity.SetExtraFields(Map)
+  fullName: CRMScript.NetServer.NSDocumentEntity.SetExtraFields(Map)
   type: Method
   summary: "\nSets the extra field values on NSDocumentEntity with a map.\n"
   remarks: 
