--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -35,7 +35,7 @@ items:
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetAutoeventId(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDefaultOref(String)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDeleted(Bool)
-  - CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection()
+  - CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDocumentTemplateId(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetDocumentTypeKey(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetEmailSubject(String)
@@ -48,13 +48,13 @@ items:
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetLoadTemplateFromPlugin(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetMimeType(String)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetName(String)
-  - CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType()
+  - CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetQuoteDocType(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetRank(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetRecordType(NSDocTmplType)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetSaveInDb(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailAddress(String)
-  - CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode()
+  - CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode(Integer)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetShowCurrents(Bool)
   - CRMScript.NetServer.NSDocumentTemplateEntity.SetTooltip(String)
   name: NSDocumentTemplateEntity
@@ -644,15 +644,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nBool deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection()
-  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection()
-  id: 'SetDirection()'
+- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection(Integer)
+  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection(Integer)
+  id: 'SetDirection(Integer)'
   so.intellisense: NSDocumentTemplateEntity.SetDirection
   langs:
   - crmscript
-  name: 'SetDirection()'
-  nameWithType: NSDocumentTemplateEntity.SetDirection()
-  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection()
+  name: 'SetDirection(Integer)'
+  nameWithType: NSDocumentTemplateEntity.SetDirection(Integer)
+  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetDirection(Integer)
   type: Method
   summary: "\nSets the direction of a document template.\n"
   remarks: 
@@ -930,15 +930,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType()
-  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType()
-  id: 'SetPrivacyDocType()'
+- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType(Integer)
+  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType(Integer)
+  id: 'SetPrivacyDocType(Integer)'
   so.intellisense: NSDocumentTemplateEntity.SetPrivacyDocType
   langs:
   - crmscript
-  name: 'SetPrivacyDocType()'
-  nameWithType: NSDocumentTemplateEntity.SetPrivacyDocType()
-  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType()
+  name: 'SetPrivacyDocType(Integer)'
+  nameWithType: NSDocumentTemplateEntity.SetPrivacyDocType(Integer)
+  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetPrivacyDocType(Integer)
   type: Method
   summary: ""
   remarks: ""
@@ -1062,15 +1062,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nString senderEmailAddress;\nthing.SetSenderEmailAddress(senderEmailAddress);</code></pre>\n"
-- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode()
-  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode()
-  id: 'SetSenderEmailMode()'
+- uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode(Integer)
+  commentId: M:CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode(Integer)
+  id: 'SetSenderEmailMode(Integer)'
   so.intellisense: NSDocumentTemplateEntity.SetSenderEmailMode
   langs:
   - crmscript
-  name: 'SetSenderEmailMode()'
-  nameWithType: NSDocumentTemplateEntity.SetSenderEmailMode()
-  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode()
+  name: 'SetSenderEmailMode(Integer)'
+  nameWithType: NSDocumentTemplateEntity.SetSenderEmailMode(Integer)
+  fullName: CRMScript.NetServer.NSDocumentTemplateEntity.SetSenderEmailMode(Integer)
   type: Method
   summary: ""
   remarks: ""
