--- a/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantSyncData.yml
@@ -53,7 +53,7 @@ items:
   - CRMScript.NetServer.NSParticipantSyncData.SetMessenger(String[])
   - CRMScript.NetServer.NSParticipantSyncData.SetParticipantStatus(Integer)
   - CRMScript.NetServer.NSParticipantSyncData.SetPersonAcademicTitle(String)
-  - CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress()
+  - CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress(NSAddressSyncData)
   - CRMScript.NetServer.NSParticipantSyncData.SetPersonCountry(String)
   - CRMScript.NetServer.NSParticipantSyncData.SetPersonFirstName(String)
   - CRMScript.NetServer.NSParticipantSyncData.SetPersonFormalName(String)
@@ -69,8 +69,8 @@ items:
   - CRMScript.NetServer.NSParticipantSyncData.SetPhoneFax(String[])
   - CRMScript.NetServer.NSParticipantSyncData.SetPhoneMobile(String[])
   - CRMScript.NetServer.NSParticipantSyncData.SetPhonePrivate(String[])
-  - CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress()
-  - CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress()
+  - CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress(NSAddressSyncData)
+  - CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress(NSAddressSyncData)
   - CRMScript.NetServer.NSParticipantSyncData.SetUrl(String[])
   - CRMScript.NetServer.NSParticipantSyncData.SetVoip(String[])
   name: NSParticipantSyncData
@@ -1039,21 +1039,26 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nString personAcademicTitle;\nthing.SetPersonAcademicTitle(personAcademicTitle);</code></pre>\n"
-- uid: CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress()
-  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress()
-  id: 'SetPersonAddress()'
+- uid: CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress(NSAddressSyncData)
+  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress(NSAddressSyncData)
+  id: 'SetPersonAddress(NSAddressSyncData)'
   so.intellisense: NSParticipantSyncData.SetPersonAddress
   langs:
   - crmscript
-  name: 'SetPersonAddress()'
-  nameWithType: NSParticipantSyncData.SetPersonAddress()
-  fullName: CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress()
+  name: 'SetPersonAddress(NSAddressSyncData)'
+  nameWithType: NSParticipantSyncData.SetPersonAddress(NSAddressSyncData)
+  fullName: CRMScript.NetServer.NSParticipantSyncData.SetPersonAddress(NSAddressSyncData)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetPersonAddress(NSAddressSyncData personAddress)
     parameters:
+    - id: personAddress
+      type: CRMScript.NetServer.NSAddressSyncData
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData personAddress;\nthing.SetPersonAddress(personAddress);</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantSyncData.SetPersonCountry(String)
@@ -1386,38 +1391,48 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nString[] phonePrivate;\nthing.SetPhonePrivate(phonePrivate);</code></pre>\n"
-- uid: CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress()
-  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress()
-  id: 'SetPostalAddress()'
+- uid: CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress(NSAddressSyncData)
+  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress(NSAddressSyncData)
+  id: 'SetPostalAddress(NSAddressSyncData)'
   so.intellisense: NSParticipantSyncData.SetPostalAddress
   langs:
   - crmscript
-  name: 'SetPostalAddress()'
-  nameWithType: NSParticipantSyncData.SetPostalAddress()
-  fullName: CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress()
+  name: 'SetPostalAddress(NSAddressSyncData)'
+  nameWithType: NSParticipantSyncData.SetPostalAddress(NSAddressSyncData)
+  fullName: CRMScript.NetServer.NSParticipantSyncData.SetPostalAddress(NSAddressSyncData)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetPostalAddress(NSAddressSyncData postalAddress)
     parameters:
+    - id: postalAddress
+      type: CRMScript.NetServer.NSAddressSyncData
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData postalAddress;\nthing.SetPostalAddress(postalAddress);</code></pre>\n"
-- uid: CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress()
-  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress()
-  id: 'SetStreetAddress()'
+- uid: CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress(NSAddressSyncData)
+  commentId: M:CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress(NSAddressSyncData)
+  id: 'SetStreetAddress(NSAddressSyncData)'
   so.intellisense: NSParticipantSyncData.SetStreetAddress
   langs:
   - crmscript
-  name: 'SetStreetAddress()'
-  nameWithType: NSParticipantSyncData.SetStreetAddress()
-  fullName: CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress()
+  name: 'SetStreetAddress(NSAddressSyncData)'
+  nameWithType: NSParticipantSyncData.SetStreetAddress(NSAddressSyncData)
+  fullName: CRMScript.NetServer.NSParticipantSyncData.SetStreetAddress(NSAddressSyncData)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetStreetAddress(NSAddressSyncData streetAddress)
     parameters:
+    - id:
+      type: CRMScript.NetServer.NSAddressSyncData
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSParticipantSyncData thing;\nNSAddressSyncData streetAddress;\nthing.SetStreetAddress(streetAddress);</code></pre>\n"
 - uid: CRMScript.NetServer.NSParticipantSyncData.SetUrl(String[])
