--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -19,7 +19,7 @@ items:
   - CRMScript.NetServer.NSPocketNotificationMessage.GetUrl()
   - CRMScript.NetServer.NSPocketNotificationMessage.SetDate(DateTime)
   - CRMScript.NetServer.NSPocketNotificationMessage.SetDuration(TimeSpan)
-  - CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues()
+  - CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues(Map)
   - CRMScript.NetServer.NSPocketNotificationMessage.SetMessage(String)
   - CRMScript.NetServer.NSPocketNotificationMessage.SetRecordId(Integer)
   - CRMScript.NetServer.NSPocketNotificationMessage.SetSilent(Bool)
@@ -292,15 +292,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPocketNotificationMessage thing;\nTimeSpan duration;\nthing.SetDuration(duration);</code></pre>\n"
-- uid: CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues()
-  commentId: M:CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues()
-  id: 'SetExtraValues()'
+- uid: CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues(Map)
+  commentId: M:CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues(Map)
+  id: 'SetExtraValues(Map)'
   so.intellisense: NSPocketNotificationMessage.SetExtraValues
   langs:
   - crmscript
-  name: 'SetExtraValues()'
-  nameWithType: NSPocketNotificationMessage.SetExtraValues()
-  fullName: CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues()
+  name: 'SetExtraValues(Map)'
+  nameWithType: NSPocketNotificationMessage.SetExtraValues(Map)
+  fullName: CRMScript.NetServer.NSPocketNotificationMessage.SetExtraValues(Map)
   type: Method
   summary: ""
   remarks: 
