--- a/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEventEntity.yml
@@ -40,7 +40,7 @@ items:
   - CRMScript.NetServer.NSProjectEventEntity.SetCreatedBy(NSAssociate)
   - CRMScript.NetServer.NSProjectEventEntity.SetCreatedDate(DateTime)
   - CRMScript.NetServer.NSProjectEventEntity.SetEnabled(Bool)
-  - CRMScript.NetServer.NSProjectEventEntity.SetEventDate()
+  - CRMScript.NetServer.NSProjectEventEntity.SetEventDate(DateTime)
   - CRMScript.NetServer.NSProjectEventEntity.SetId(Integer)
   - CRMScript.NetServer.NSProjectEventEntity.SetIsPublished(Bool)
   - CRMScript.NetServer.NSProjectEventEntity.SetIsVisibleForCategories(Bool)
@@ -63,7 +63,7 @@ items:
   - CRMScript.NetServer.NSProjectEventEntity.SetSignOnTaskId(Integer)
   - CRMScript.NetServer.NSProjectEventEntity.SetSignOnText(String)
   - CRMScript.NetServer.NSProjectEventEntity.SetSignOnTriggersAssign(Bool)
-  - CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy()
+  - CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy(NSAssociate)
   - CRMScript.NetServer.NSProjectEventEntity.SetUpdatedDate(DateTime)
   - CRMScript.NetServer.NSProjectEventEntity.SetVisibleForCategories(NSMDOListItem[])
   - CRMScript.NetServer.NSProjectEventEntity.SetVisibleForPersonInterests(NSMDOListItem[])
@@ -754,15 +754,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSProjectEventEntity thing;\nBool enabled;\nthing.SetEnabled(enabled);</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectEventEntity.SetEventDate()
-  commentId: M:CRMScript.NetServer.NSProjectEventEntity.SetEventDate()
-  id: 'SetEventDate()'
+- uid: CRMScript.NetServer.NSProjectEventEntity.SetEventDate(DateTime)
+  commentId: M:CRMScript.NetServer.NSProjectEventEntity.SetEventDate(DateTime)
+  id: 'SetEventDate(DateTime)'
   so.intellisense: NSProjectEventEntity.SetEventDate
   langs:
   - crmscript
-  name: 'SetEventDate()'
-  nameWithType: NSProjectEventEntity.SetEventDate()
-  fullName: CRMScript.NetServer.NSProjectEventEntity.SetEventDate()
+  name: 'SetEventDate(DateTime)'
+  nameWithType: NSProjectEventEntity.SetEventDate(DateTime)
+  fullName: CRMScript.NetServer.NSProjectEventEntity.SetEventDate(DateTime)
   type: Method
   summary: ""
   remarks: 
@@ -1260,15 +1260,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSProjectEventEntity thing;\nBool signOnTriggersAssign;\nthing.SetSignOnTriggersAssign(signOnTriggersAssign);</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy()
-  commentId: M:CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy()
-  id: 'SetUpdatedBy()'
+- uid: CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy(NSAssociate)
+  commentId: M:CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy(NSAssociate)
+  id: 'SetUpdatedBy(NSAssociate)'
   so.intellisense: NSProjectEventEntity.SetUpdatedBy
   langs:
   - crmscript
-  name: 'SetUpdatedBy()'
-  nameWithType: NSProjectEventEntity.SetUpdatedBy()
-  fullName: CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy()
+  name: 'SetUpdatedBy(NSAssociate)'
+  nameWithType: NSProjectEventEntity.SetUpdatedBy(NSAssociate)
+  fullName: CRMScript.NetServer.NSProjectEventEntity.SetUpdatedBy(NSAssociate)
   type: Method
   summary: ""
   remarks: 
