--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
@@ -31,7 +31,7 @@ items:
   - CRMScript.NetServer.NSQuoteAlternative.GetVAT()
   - CRMScript.NetServer.NSQuoteAlternative.GetVATInfo()
   - CRMScript.NetServer.NSQuoteAlternative.SetDescription(String)
-  - CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount()
+  - CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount(Float)
   - CRMScript.NetServer.NSQuoteAlternative.SetDiscountPercent(Float)
   - CRMScript.NetServer.NSQuoteAlternative.SetEarningAmount(Float)
   - CRMScript.NetServer.NSQuoteAlternative.SetEarningPercent(Float)
@@ -556,15 +556,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSQuoteAlternative thing;\nString description;\nthing.SetDescription(description);</code></pre>\n"
-- uid: CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount()
-  commentId: M:CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount()
-  id: 'SetDiscountAmount()'
+- uid: CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount(Float)
+  commentId: M:CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount(Float)
+  id: 'SetDiscountAmount(Float)'
   so.intellisense: NSQuoteAlternative.SetDiscountAmount
   langs:
   - crmscript
-  name: 'SetDiscountAmount()'
-  nameWithType: NSQuoteAlternative.SetDiscountAmount()
-  fullName: CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount()
+  name: 'SetDiscountAmount(Float)'
+  nameWithType: NSQuoteAlternative.SetDiscountAmount(Float)
+  fullName: CRMScript.NetServer.NSQuoteAlternative.SetDiscountAmount(Float)
   type: Method
   summary: ""
   remarks: "\nIf this field is filled out by the user, it overrides the discount suggested by the connector. If the user has not filled any values, the system will copy the ERP discount amount value into this field.\n"
