--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -66,9 +66,9 @@ items:
   - CRMScript.NetServer.NSSaleEntity.SetCustomFields(Map)
   - CRMScript.NetServer.NSSaleEntity.SetEarning(Float)
   - CRMScript.NetServer.NSSaleEntity.SetEarningPercent(Float)
-  - CRMScript.NetServer.NSSaleEntity.SetExtraFields()
+  - CRMScript.NetServer.NSSaleEntity.SetExtraFields(Map)
   - CRMScript.NetServer.NSSaleEntity.SetHeading(String)
-  - CRMScript.NetServer.NSSaleEntity.SetIsPublished()
+  - CRMScript.NetServer.NSSaleEntity.SetIsPublished(Bool)
   - CRMScript.NetServer.NSSaleEntity.SetLinks(NSLink[])
   - CRMScript.NetServer.NSSaleEntity.SetNextDueDate(DateTime)
   - CRMScript.NetServer.NSSaleEntity.SetNumber(String)
@@ -93,7 +93,7 @@ items:
   - CRMScript.NetServer.NSSaleEntity.SetStatus(Integer)
   - CRMScript.NetServer.NSSaleEntity.SetUpdatedBy(NSAssociate)
   - CRMScript.NetServer.NSSaleEntity.SetUpdatedDate(DateTime)
-  - CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields()
+  - CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields(Map)
   - CRMScript.NetServer.NSSaleEntity.SetVisibleFor(NSVisibleFor[])
   name: NSSaleEntity
   nameWithType: NSSaleEntity
@@ -1314,15 +1314,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSSaleEntity thing;\nFloat earningPercent;\nthing.SetEarningPercent(earningPercent);</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleEntity.SetExtraFields()
-  commentId: M:CRMScript.NetServer.NSSaleEntity.SetExtraFields()
-  id: 'SetExtraFields()'
+- uid: CRMScript.NetServer.NSSaleEntity.SetExtraFields(Map)
+  commentId: M:CRMScript.NetServer.NSSaleEntity.SetExtraFields(Map)
+  id: 'SetExtraFields(Map)'
   so.intellisense: NSSaleEntity.SetExtraFields
   langs:
   - crmscript
-  name: 'SetExtraFields()'
-  nameWithType: NSSaleEntity.SetExtraFields()
-  fullName: CRMScript.NetServer.NSSaleEntity.SetExtraFields()
+  name: 'SetExtraFields(Map)'
+  nameWithType: NSSaleEntity.SetExtraFields(Map)
+  fullName: CRMScript.NetServer.NSSaleEntity.SetExtraFields(Map)
   type: Method
   summary: "\nSets the extra field values on SaleEntity with a map.\n"
   remarks: 
@@ -1358,15 +1358,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSSaleEntity thing;\nString heading;\nthing.SetHeading(heading);</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleEntity.SetIsPublished()
-  commentId: M:CRMScript.NetServer.NSSaleEntity.SetIsPublished()
-  id: 'SetIsPublished()'
+- uid: CRMScript.NetServer.NSSaleEntity.SetIsPublished(Bool)
+  commentId: M:CRMScript.NetServer.NSSaleEntity.SetIsPublished(Bool)
+  id: 'SetIsPublished(Bool)'
   so.intellisense: NSSaleEntity.SIsPublished
   langs:
   - crmscript
-  name: 'SetIsPublished()'
-  nameWithType: NSSaleEntity.SetIsPublished()
-  fullName: CRMScript.NetServer.NSSaleEntity.SetIsPublished()
+  name: 'SetIsPublished(Bool)'
+  nameWithType: NSSaleEntity.SetIsPublished(Bool)
+  fullName: CRMScript.NetServer.NSSaleEntity.SetIsPublished(Bool)
   type: Method
   summary: "\nSets the visibility of the entity\n"
   remarks: 
@@ -1902,15 +1902,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSSaleEntity thing;\nDateTime updatedDate;\nthing.SetUpdatedDate(updatedDate);</code></pre>\n"
-- uid: CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields()
-  commentId: M:CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields()
-  id: 'SetUserDefinedFields()'
+- uid: CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields(Map)
+  commentId: M:CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields(Map)
+  id: 'SetUserDefinedFields(Map)'
   so.intellisense: NSSaleEntity.SetUserDefinedFields
   langs:
   - crmscript
-  name: 'SetUserDefinedFields()'
-  nameWithType: NSSaleEntity.SetUserDefinedFields()
-  fullName: CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields()
+  name: 'SetUserDefinedFields(Map)'
+  nameWithType: NSSaleEntity.SetUserDefinedFields(Map)
+  fullName: CRMScript.NetServer.NSSaleEntity.SetUserDefinedFields(Map)
   type: Method
   summary: "\nSets the user-defined fields on the SaleEntity as a map.\n"
   remarks: 
