--- a/docs/api-reference/CRMScript.NetServer.NSUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUser.yml
@@ -38,7 +38,7 @@ items:
   - CRMScript.NetServer.NSUser.SetDeleted(Bool)
   - CRMScript.NetServer.NSUser.SetDisplayName(String)
   - CRMScript.NetServer.NSUser.SetEjUserId(Integer)
-  - CRMScript.NetServer.NSUser.SetExtraFields()
+  - CRMScript.NetServer.NSUser.SetExtraFields(Map)
   - CRMScript.NetServer.NSUser.SetIsOnTravel(Bool)
   - CRMScript.NetServer.NSUser.SetIsPersonRetired(Bool)
   - CRMScript.NetServer.NSUser.SetLastlogin(DateTime)
@@ -708,15 +708,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSUser thing;\nInteger ejUserId;\nthing.SetEjUserId(ejUserId);</code></pre>\n"
-- uid: CRMScript.NetServer.NSUser.SetExtraFields()
-  commentId: M:CRMScript.NetServer.NSUser.SetExtraFields()
-  id: 'SetExtraFields()'
+- uid: CRMScript.NetServer.NSUser.SetExtraFields(Map)
+  commentId: M:CRMScript.NetServer.NSUser.SetExtraFields(Map)
+  id: 'SetExtraFields(Map)'
   so.intellisense: NSUser.SetExtraFields
   langs:
   - crmscript
-  name: 'SetExtraFields()'
-  nameWithType: NSUser.SetExtraFields()
-  fullName: CRMScript.NetServer.NSUser.SetExtraFields()
+  name: 'SetExtraFields(Map)'
+  nameWithType: NSUser.SetExtraFields(Map)
+  fullName: CRMScript.NetServer.NSUser.SetExtraFields(Map)
   type: Method
   summary: "\nSets the extra field values on User with a map.\n"
   remarks: 
