--- a/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhook.yml
@@ -23,7 +23,7 @@ items:
   - CRMScript.NetServer.NSWebhook.SetEvents(String[])
   - CRMScript.NetServer.NSWebhook.SetHeaders(Map)
   - CRMScript.NetServer.NSWebhook.SetName(String)
-  - CRMScript.NetServer.NSWebhook.SetProperties()
+  - CRMScript.NetServer.NSWebhook.SetProperties(Map)
   - CRMScript.NetServer.NSWebhook.SetRegistered(DateTime)
   - CRMScript.NetServer.NSWebhook.SetRegisteredAssociate(NSAssociate)
   - CRMScript.NetServer.NSWebhook.SetSecret(String)
@@ -380,15 +380,15 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSWebhook thing;\nString name;\nthing.SetName(name);</code></pre>\n"
-- uid: CRMScript.NetServer.NSWebhook.SetProperties()
-  commentId: M:CRMScript.NetServer.NSWebhook.SetProperties()
-  id: 'SetProperties()'
+- uid: CRMScript.NetServer.NSWebhook.SetProperties(Map)
+  commentId: M:CRMScript.NetServer.NSWebhook.SetProperties(Map)
+  id: 'SetProperties(Map)'
   so.intellisense: NSWebhook.SetProperties
   langs:
   - crmscript
-  name: 'SetProperties()'
-  nameWithType: NSWebhook.SetProperties()
-  fullName: CRMScript.NetServer.NSWebhook.SetProperties()
+  name: 'SetProperties(Map)'
+  nameWithType: NSWebhook.SetProperties(Map)
+  fullName: CRMScript.NetServer.NSWebhook.SetProperties(Map)
   type: Method
   summary: ""
   remarks: 
