--- a/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
@@ -16,12 +16,12 @@ items:
   - CRMScript.NetServer.NSDSAParameters.GetSeed()
   - CRMScript.NetServer.NSDSAParameters.GetY()
   - CRMScript.NetServer.NSDSAParameters.SetCounter(Integer)
-  - CRMScript.NetServer.NSDSAParameters.SetG()
-  - CRMScript.NetServer.NSDSAParameters.SetJ()
-  - CRMScript.NetServer.NSDSAParameters.SetP()
-  - CRMScript.NetServer.NSDSAParameters.SetQ()
-  - CRMScript.NetServer.NSDSAParameters.SetSeed()
-  - CRMScript.NetServer.NSDSAParameters.SetY()
+  - CRMScript.NetServer.NSDSAParameters.SetG(NSBinary)
+  - CRMScript.NetServer.NSDSAParameters.SetJ(NSBinary)
+  - CRMScript.NetServer.NSDSAParameters.SetP(NSBinary)
+  - CRMScript.NetServer.NSDSAParameters.SetQ(NSBinary)
+  - CRMScript.NetServer.NSDSAParameters.SetSeed(NSBinary)
+  - CRMScript.NetServer.NSDSAParameters.SetY(NSBinary)
   name: NSDSAParameters
   nameWithType: NSDSAParameters
   fullName: CRMScript.NetServer.NSDSAParameters
@@ -191,15 +191,15 @@ items:
     return:
       type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetG()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetG()
-  id: 'SetG()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetG(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetG(NSBinary)
+  id: 'SetG(NSBinary)'
   so.intellisense: NSDSAParameters.SetG
   langs:
   - crmscript
-  name: 'SetG()'
-  nameWithType: NSDSAParameters.SetG()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetG()
+  name: 'SetG(NSBinary)'
+  nameWithType: NSDSAParameters.SetG(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetG(NSBinary)
   type: Method
   summary: 
   remarks: 
@@ -212,85 +212,110 @@ items:
     return:
       type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetJ()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetJ()
-  id: 'SetJ()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetJ(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetJ(NSBinary)
+  id: 'SetJ(NSBinary)'
   so.intellisense: NSDSAParameters.SetJ
   langs:
   - crmscript
-  name: 'SetJ()'
-  nameWithType: NSDSAParameters.SetJ()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetJ()
+  name: 'SetJ(NSBinary)'
+  nameWithType: NSDSAParameters.SetJ(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetJ(NSBinary)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetJ(NSBinary value)
     parameters:
+    - id: value
+      type: CRMScript.NetServer.NSBinary
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetP()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetP()
-  id: 'SetP()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetP(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetP(NSBinary)
+  id: 'SetP(NSBinary)'
   so.intellisense: NSDSAParameters.SetP
   langs:
   - crmscript
-  name: 'SetP()'
-  nameWithType: NSDSAParameters.SetP()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetP()
+  name: 'SetP(NSBinary)'
+  nameWithType: NSDSAParameters.SetP(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetP(NSBinary)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetP(NSBinary value)
     parameters:
+    - id: value
+      type: CRMScript.NetServer.NSBinary
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetQ()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetQ()
-  id: 'SetQ()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetQ(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetQ(NSBinary)
+  id: 'SetQ(NSBinary)'
   so.intellisense: NSDSAParameters.SetQ
   langs:
   - crmscript
-  name: 'SetQ()'
-  nameWithType: NSDSAParameters.SetQ()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetQ()
+  name: 'SetQ(NSBinary)'
+  nameWithType: NSDSAParameters.SetQ(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetQ(NSBinary)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetQ(NSBinary value)
     parameters:
+    - id: value
+      type: CRMScript.NetServer.NSBinary
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetSeed()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetSeed()
-  id: 'SetSeed()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetSeed(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetSeed(NSBinary)
+  id: 'SetSeed(NSBinary)'
   so.intellisense: NSDSAParameters.SetSeed
   langs:
   - crmscript
-  name: 'SetSeed()'
-  nameWithType: NSDSAParameters.SetSeed()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetSeed()
+  name: 'SetSeed(NSBinary)'
+  nameWithType: NSDSAParameters.SetSeed(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetSeed(NSBinary)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetSeed(NSBinary value)
     parameters:
+    - id: value
+      type: CRMScript.NetServer.NSBinary
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
-- uid: CRMScript.NetServer.NSDSAParameters.SetY()
-  commentId: M:CRMScript.NetServer.NSDSAParameters.SetY()
-  id: 'SetY()'
+- uid: CRMScript.NetServer.NSDSAParameters.SetY(NSBinary)
+  commentId: M:CRMScript.NetServer.NSDSAParameters.SetY(NSBinary)
+  id: 'SetY(NSBinary)'
   so.intellisense: NSDSAParameters.SetY
   langs:
   - crmscript
-  name: 'SetY()'
-  nameWithType: NSDSAParameters.SetY()
-  fullName: CRMScript.NetServer.NSDSAParameters.SetY()
+  name: 'SetY(NSBinary)'
+  nameWithType: NSDSAParameters.SetY(NSBinary)
+  fullName: CRMScript.NetServer.NSDSAParameters.SetY(NSBinary)
   type: Method
   summary: 
   remarks: 
   syntax: 
     content: Void SetY(NSBinary value)
     parameters:
+    - id: value
+      type: CRMScript.NetServer.NSBinary
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.NetServer.NSDSAParameters
