--- a/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
@@ -12,7 +12,7 @@ items:
   - CRMScript.NetServer.NSUserGroup.GetRank()
   - CRMScript.NetServer.NSUserGroup.GetTooltip()
   - CRMScript.NetServer.NSUserGroup.GetValue()
-  - CRMScript.NetServer.NSUserGroup.SetDeleted()
+  - CRMScript.NetServer.NSUserGroup.SetDeleted(Bool)
   - CRMScript.NetServer.NSUserGroup.SetId(Integer)
   - CRMScript.NetServer.NSUserGroup.SetRank(Integer)
   - CRMScript.NetServer.NSUserGroup.SetTooltip(String)
@@ -138,15 +138,15 @@ items:
       description: UserGroup name
   example: 
   - "\n<pre><code>NSUserGroup thing;\nString value = thing.GetValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSUserGroup.SetDeleted()
-  commentId: M:CRMScript.NetServer.NSUserGroup.SetDeleted()
-  id: 'SetDeleted()'
+- uid: CRMScript.NetServer.NSUserGroup.SetDeleted(Bool)
+  commentId: M:CRMScript.NetServer.NSUserGroup.SetDeleted(Bool)
+  id: 'SetDeleted(Bool)'
   so.intellisense: NSUserGroup.SetDeleted
   langs:
   - crmscript
-  name: 'SetDeleted()'
-  nameWithType: NSUserGroup.SetDeleted()
-  fullName: CRMScript.NetServer.NSUserGroup.SetDeleted()
+  name: 'SetDeleted(Bool)'
+  nameWithType: NSUserGroup.SetDeleted(Bool)
+  fullName: CRMScript.NetServer.NSUserGroup.SetDeleted(Bool)
   type: Method
   summary: "\nMarks a user group.\n"
   remarks: "\nIt is not permitted to delete a UserGroup.\n"
